Fixed spacing

--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ margin-left: 30px;
   display: block;	
   width: 37px;
   height: 33px;
-  margin: 25px 5px 0 0;
+  margin: 28px 5px 0 0;
 }
 
 #contact-icons #rss-icon {
@@ -113,7 +113,7 @@ margin-left: 30px;
 }
 
 #contact-icons #paypal-donate {
-  margin-right: 30px;
+  margin-right: 35px;
 }
 
 .FlattrButton {
